✨ Added Move unit command