@@ -7,12 +7,14 @@ import java.util.stream.Stream;
 
 import com.rogers.rmcdouga.fitg.basegame.map.BaseGamePlanet;
 import com.rogers.rmcdouga.fitg.basegame.map.StarSystem;
+import com.rogers.rmcdouga.fitg.basegame.units.BaseGameCharacter;
 import com.rogers.rmcdouga.fitg.basegame.units.BaseGameImperialSpaceship;
 import com.rogers.rmcdouga.fitg.basegame.units.Counter;
 import com.rogers.rmcdouga.fitg.basegame.units.Spaceship;
 import com.rogers.rmcdouga.fitg.basegame.units.StackManager;
 import com.rogers.rmcdouga.fitg.basegame.units.StackManager.SpaceshipStack;
 import com.rogers.rmcdouga.fitg.basegame.units.StackManager.Stack;
+import com.rogers.rmcdouga.fitg.basegame.units.Unit;
 
 public class MockPlayerStrategies {
 	public static class FlightToEgrixStrategies {
@@ -46,10 +48,14 @@ public class MockPlayerStrategies {
 											.filter(c->c == BaseGameImperialSpaceship.Imperial_Spaceship)
 											.findAny()
 											.get();
-				List<Counter> characters = counters.stream().filter(c->c != BaseGameImperialSpaceship.Imperial_Spaceship).collect(Collectors.toList());
-				SpaceshipStack stack = stackMgr.of((Spaceship)spaceship, characters.toArray(new Counter[0]));
+				List<Counter> characters = counters.stream().filter(c->c instanceof BaseGameCharacter).collect(Collectors.toList());
+				SpaceshipStack spaceshipStack = stackMgr.of((Spaceship)spaceship, characters.toArray(new Counter[0]));
+				List<Counter> units = counters.stream()
+											  .filter(c->c instanceof Unit)
+											  .toList();
+				Stack unitStack = stackMgr.of(units);
 				
-				return List.of(new PlaceCountersInstruction(stack, BaseGamePlanet.Quibron.environ(0)));
+				return List.of(new PlaceCountersInstruction(spaceshipStack, BaseGamePlanet.Quibron.environ(0)), new PlaceCountersInstruction(unitStack, BaseGamePlanet.Quibron.environ(0)));
 			}
 			
 		}
